<resources>
    <string name="app_name">AniLibrary</string>
    <string name="title_home">Home</string>
    <string name="title_explore">Explore</string>
    <string name="title_profile">Profile</string>
    <string name="title_edit_profile">Edit Profile</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_change_email">Change Email</string>
    <string name="title_detail">Anime Detail</string>
    <string name="title_all_list">All Anime List</string>
    <string name="title_watched_list">Watched Anime List</string>
    <string name="title_planned_list">Planned Anime List</string>
    <string name="title_on_boarding">OnBoarding</string>

    <!--    Home Layout-->
    <string name="home_title">%1$s - %2$s</string>
    <string-array name="seasonList">
        <item>Fall</item>
        <item>Summer</item>
        <item>Spring</item>
        <item>Winter</item>
    </string-array>
    <!--    CardView Vertical-->
    <string name="tv_episode">(%1$s Eps)</string>
    <string name="rating">★ %1$s</string>

    <string name="rto">Connection Error</string>
    <string name="retry">Retry</string>

    <string name="dummy_rating">★ 8.06</string>
    <string name="explore_text">Explore new anime here!</string>

    <!-- Detail Layout -->
    <string name="synopsis">Synopsis</string>
    <string name="information">Information</string>
    <string name="add_watch_list">Add to Watch List</string>
    <string name="watch_list">Your Watch List</string>
    <string name="watched_list">Watched List</string>
    <string name="all_list">All List</string>
    <string name="planned_list">Planned List</string>
    <string name="planned">Planned</string>
    <string name="watched">Watched</string>
    <string name="type">Type : %1$s</string>
    <string name="users">%1$s Users</string>
    <string name="rank">Ranked #%1$s</string>
    <string name="num_eps">Episodes : %1$s</string>
    <string name="status">Status : %1$s</string>
    <string name="season">Season : %1$s\u0020</string>
    <string name="genre">Genre : %1$s</string>
    <string name="studio">Studios : %1$s</string>
    <string name="append">, %1$s</string>

    <!-- Login and Register Layout -->
    <string name="welcome_msg">Welcome to AniLibrary</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_conf">Confirm Password</string>
    <string name="info_register">"Don't have an Account yet?"</string>
    <string name="register_bt">Register now</string>
    <string name="info_login">Already have an account?</string>
    <string name="login_bt">Login now</string>

    <string name="logout">Logout</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="onboard_1">Discover the world of anime with AniLibrary, a cutting-edge mobile app designed for your anime cravings</string>
    <string name="onboard_2">AniLibrary is an innovative and user-friendly mobile app showcasing the latest seasonal anime releases</string>
    <string name="onboard_3">Explore and personalize your anime watchlist with our intuitive featured lists feature with AniLibrary!</string>

    <!-- Edit Profile Layout -->
    <string name="change_password">Change current Password</string>
    <string name="change_email">Change current Email</string>
    <string name="buttonSave">Save Changes</string>
    <string name="discardChanges">Discard Changes</string>
    <string name="gender">Gender</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="new_email">New Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello">Hello</string>
</resources>