<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.anilibrary.ui.fragment.LoginFragment"
        android:label="@string/login"
        tools:layout="@layout/fragment_login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home" />
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"
            app:popUpTo="@id/navigation_login"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/navigation_register"
        android:name="com.example.anilibrary.ui.fragment.RegisterFragment"
        android:label="@string/register"
        tools:layout="@layout/fragment_register">
        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login"
            app:popUpTo="@id/navigation_register" />
        <action
            android:id="@+id/action_navigation_register_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.anilibrary.ui.fragment.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail" />
        <action
            android:id="@+id/action_navigation_home_to_navigation_all_list"
            app:destination="@id/navigation_all_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_explore"
        android:name="com.example.anilibrary.ui.fragment.ExploreFragment"
        android:label="@string/title_explore"
        tools:layout="@layout/fragment_explore" >
        <action
            android:id="@+id/action_navigation_explore_to_navigation_detail"
            app:destination="@id/navigation_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.anilibrary.ui.fragment.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_navigation_profile_to_navigation_watched_list"
            app:destination="@id/navigation_watched_list" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_planned_list"
            app:destination="@id/navigation_planned_list" />
        <action
            android:id="@+id/action_navigation_profile_to_navigation_all_list"
            app:destination="@id/navigation_all_list" />
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.example.anilibrary.ui.fragment.DetailFragment"
        android:label="@string/title_detail"
        tools:layout="@layout/fragment_detail">

        <argument
            android:name="id"
            app:argType="integer"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_all_list"
        android:name="com.example.anilibrary.ui.fragment.AllListFragment"
        android:label="@string/title_all_list"
        tools:layout="@layout/fragment_all_list"/>

    <fragment
        android:id="@+id/navigation_watched_list"
        android:name="com.example.anilibrary.ui.fragment.WatchedListFragment"
        android:label="@string/title_watched_list"
        tools:layout="@layout/fragment_watched_list"/>

    <fragment
        android:id="@+id/navigation_planned_list"
        android:name="com.example.anilibrary.ui.fragment.PlannedListFragment"
        android:label="@string/title_planned_list"
        tools:layout="@layout/fragment_planned_list"/>
</navigation>