<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragment.LoginFragment"
    android:orientation="vertical"
    android:background="@color/purple_30">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginVertical="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/purple_30"
            app:cardCornerRadius="60dp"
            app:cardElevation="10dp">
            <ImageView
                android:layout_width="145dp"
                android:layout_height="145dp"
                android:layout_gravity="center"
                android:src="@drawable/logo_app_white" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_msg"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textSize="25sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/card_view_bg"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:gravity="center_horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textAlignment="center"
            android:fontFamily="sans-serif"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:layout_marginVertical="30dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"
            android:layout_marginBottom="30dp">
            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/loginButton"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:fontFamily="sans-serif"
            android:textSize="18sp"
            android:text="@string/login"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_marginBottom="40dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:text="@string/info_register"/>
                <TextView
                    android:id="@+id/register_page"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/blue"
                    android:fontFamily="sans-serif"
                    android:textSize="15sp"
                    android:text="@string/register_bt" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>