<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.EditProfileFragment"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingHorizontal="20dp">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="30dp"
        app:cardCornerRadius="10dp">
        <ImageView
            android:id="@+id/iv_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            app:layout_constraintDimensionRatio="H,1:1"
            android:scaleType="centerCrop"/>

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="20dp"
                android:layout_margin="10dp"
                android:layout_gravity="end">
                <ImageView
                    android:id="@+id/edit_image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:padding="8dp"
                    android:src="@drawable/edit_icon_blue"/>

            </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <EditText
                android:id="@+id/edit_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <EditText
                android:id="@+id/edit_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <EditText
                android:id="@+id/change_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_email"
                android:inputType="none"
                android:background="@color/white"
                android:focusable="false"
                android:clickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp">
            <EditText
                android:id="@+id/change_pw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/change_password"
                android:inputType="none"
                android:background="@color/white"
                android:focusable="false"
                android:clickable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|bottom"
        android:layout_marginBottom="40dp">
        <Button
            android:id="@+id/buttonSave"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:paddingVertical="15dp"
            android:text="@string/buttonSave" />
    </LinearLayout>



</LinearLayout>